--- a/assignment/index.html
+++ b/assignment/index.html
@@ -10,6 +10,10 @@
     <p>See console for output.</p>
     <!-- Create an unordered list with any questions you have -->
     <ul>
-      <li> 
+      <li> Wholeheartedly confused about nested properties within an array, I.e. track search </li>
+      <li> I understand that for my search function, i would want to add a nested for loop to check tracks:name per album, but i don't know where this would go, or how to reference the underlying keys. I tried to use Object.tracks.keys but i assume the .keys method can only be run on an object, not a property of one?</li>
+      <li> I had tried to declare a variable set to collection.tracks, but it didn't seem to work, im sure there's some syntax or basic thing im missing, felt really good about everything up until this, meant to spend more time this weekend but i got taken down by my second pfizer shot :(</li>
+    </ul>
+
   </body>
 </html>
